fix spider pins and add toolboard

--- a/bed_stepper.cfg
+++ b/bed_stepper.cfg
@@ -3,47 +3,44 @@
 [stepper_z]
 step_pin: Z_STEP
 dir_pin: Z_DIR
-enable_pin: Z_E
+enable_pin: !Z_EN
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
 endstop_pin: probe:z_virtual_endstop
-position_max: 315
-position_min: -20
+position_max: 305
+position_min: -5
 homing_speed: 10
 homing_retract_speed: 5
 second_homing_speed: 2.5
 
-[tmc2209 stepper_z]
+[tmc2208 stepper_z]
 uart_pin: Z_UART
 run_current: 1.000
-hold_current: 0.750
 #stealthchop_threshold: 1000
 
 [stepper_z1]
 step_pin: E0_STEP
 dir_pin: E0_DIR
-enable_pin: E0_EN
+enable_pin: !E0_EN
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
 
-[tmc2209 stepper_z1]
+[tmc2208 stepper_z1]
 uart_pin: E0_UART
 run_current: 1.000
-hold_current: 0.750
 #stealthchop_threshold: 1000
 
 [stepper_z2]
 step_pin: E1_STEP
 dir_pin: E1_DIR
-enable_pin: E1_EN
+enable_pin: !E1_EN
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
 
-[tmc2209 stepper_z2]
+[tmc2208 stepper_z2]
 uart_pin: E1_UART
 run_current: 1.000
-hold_current: 0.750
 #stealthchop_threshold: 1000
