--- a/euclid.cfg
+++ b/euclid.cfg
@@ -70,10 +70,10 @@
 #
 
 [probe]
-pin: ^Z_MIN
+pin: ^EBBCan:PB9
 x_offset: 0
-y_offset: 30.0
-z_offset: 5.67
+y_offset: 25.0
+z_offset: 7.430
 speed: 5
 samples: 3
 samples_result: median
@@ -96,10 +96,11 @@ set_position_z: 0
 gcode:
    STATUS_HOMING
    G90
-   G1 Z20 F3000
-   G28 X Y
+   G1 Z10 F600
+   G28 Y
+   G28 X
    M401
-   G1 X10 Y10 F18000
+   G1 X15 Y5 F18000
    G28 Z
    G1 Z20 F3000
    STATUS_READY
@@ -175,9 +176,10 @@ gcode:
 # Definition of bed_mesh
 [bed_mesh]
 speed: 300
-mesh_min: 25,25
-mesh_max: 500,475
-probe_count: 6,6
+mesh_min: 15,30
+mesh_max: 510,525
+algorithm: bicubic
+probe_count: 9,9
 fade_start: 1.0
 fade_end: 0.0
 horizontal_move_z: 10
@@ -186,14 +188,14 @@ horizontal_move_z: 10
 [gcode_macro BED_MESH_CALIBRATE]
 rename_existing: BED_MESH_CALIBRATE_BASE
 ; gcode parameters
-variable_parameter_AREA_START : 25,25
-variable_parameter_AREA_END : 500,475
+variable_parameter_AREA_START : 15,30
+variable_parameter_AREA_END : 510,525
 ; the clearance between print area and probe area 
 variable_mesh_area_offset : 5.0
 ; number of sample per probe point
 variable_probe_samples : 3
 ; minimum probe count
-variable_min_probe_count : 3
+variable_min_probe_count : 5
 ; scale up the probe count, should be 1.0 ~ < variable_max_probe_count/variable_min_probe_count
 variable_probe_count_scale_factor : 1.0
 gcode:
@@ -280,13 +282,13 @@ z_positions:
   274.339,557.81
   575.548,-20.4
 points:
-	5,5
-	262.5,475
-	520,5
+	15,5
+  15,500
+	510,5
 speed: 300
 horizontal_move_z: 20
 retries: 3
-retry_tolerance: 0.1
+retry_tolerance: 0.02
 
 # Macro to perform a modified z_tilt by wrapping it between M401/M402 macros
 [gcode_macro Z_TILT_ADJUST]
@@ -302,24 +304,24 @@ gcode:
 gcode:
       G90
       G1 Z20 F3000                 ;  set approach elevation of Z20 to clear probe over bed on fixed gantry machine
-      G1 X463 Y472 F30000         ;  move the carraige to safe position to move from
+      G1 X41 Y525 F18000         ;  move the carraige to safe position to move from
       M400
 
 [gcode_macro _position_side]
 gcode:
       G90
-      G1 X523 Y502 F3000          ;  move to the side of the dock
+      G1 X1 Y525 F3000          ;  move to the side of the dock
       M400
 
 [gcode_macro _position_door]
 gcode:
       G90
-      G1 X483 Y532 F3000 
+      G1 X41 Y545 F3000 
       M400
 
 [gcode_macro _position_probe]
 gcode:
       G90
-      G1 X523 Y532 F1800 
+      G1 X1 Y545 F1800 
       M400
 
