--- a/macros.cfg
+++ b/macros.cfg
@@ -3,14 +3,16 @@
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
-	{% set X = params.X|default(0)|float %}
-    {% set Y = params.Y|default(305)|float %}
+	{% set X = params.X|default(10)|float %}
+    {% set Y = params.Y|default(10)|float %}
     {% set Z = params.Z|default(10)|float %}
     {% set E = params.E|default(1)|float %}
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
     G91
-    G1 E-{E} F2100
+    {% if printer.extruder.temperature > 180 %}
+      G1 E-{E} F2100
+    {% endif %}
     G1 Z{Z}
     G90
     G1 X{X} Y{Y} F6000
@@ -20,7 +22,9 @@ rename_existing: BASE_RESUME
 gcode:
     {% set E = params.E|default(1)|float %}
 	G91
-    G1 E{E} F2100
+    {% if printer.extruder.temperature > 180 %}
+      G1 E{E} F2100
+    {% endif %}
     G90
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
     BASE_RESUME
@@ -87,10 +91,10 @@ gcode:
     M117 Homing
     G28
     M117 Bed Mesh
-    BED_MESH_CALIBRATE ;AREA_START={params.AREA_START|default("0,0")} AREA_END={params.AREA_END|default("0,0")}
+    BED_MESH_CALIBRATE AREA_START={params.AREA_START|default("0,0")} AREA_END={params.AREA_END|default("0,0")}
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={EXTRUDER_TEMP}
+    M402
     G1 X0 Y0 Z20 F18000
-    #M402
     M117 Waiting for Extruder
     M109 S{EXTRUDER_TEMP} ; wait for extruder temp
     # Prime line routine
@@ -127,9 +131,9 @@ gcode:
     # Raise nozzle by 10mm
     G1 Z10 F3000
     G90
-    G1 X0 Y500 F18000
+    G1 X10 Y500 F18000
     # Disable steppers
-    M84
+    # M84
     STATUS_OFF
 
 [gcode_macro PREHEAT]
@@ -147,5 +151,6 @@ gcode:
 [gcode_macro RECOVER_BED]
 gcode:
     FORCE_MOVE STEPPER=stepper_z DISTANCE=-25 VELOCITY=300 ACCEL=30
-    FORCE_MOVE STEPPER=stepper_z1 DISTANCE=-25 VELOCITY=300 ACCEL=30
+    FORCE_MOVE STEPPER=stepper_z1 DISTANCE=-50 VELOCITY=300 ACCEL=30
     FORCE_MOVE STEPPER=stepper_z2 DISTANCE=-25 VELOCITY=300 ACCEL=30
+    G28
