--- a/printer.cfg
+++ b/printer.cfg
@@ -1,6 +1,6 @@
 # Based on https://github.com/KevinOConnor/klipper/blob/master/config
 
-# HevORT CoreXY SKR1.4
+# HevORT CoreXY Spider2.3
 # JMC Servos on X and Y. Need increased Step-Pulse-Duration.
 
 ########################################
@@ -24,7 +24,7 @@ serial: /tmp/klipper_host_mcu
 # import x and y axis
 [include servos.cfg]
 # import extruder
-[include extruder.cfg]
+[include boards/ebb42v1_2.cfg]
 # import probe
 [include euclid.cfg]
 # import stepper
@@ -32,17 +32,22 @@ serial: /tmp/klipper_host_mcu
 # import heater
 [include bed_heater.cfg]
 # import neopixel
-[include neopixel.cfg]
+#[include neopixel.cfg]
 
 [printer]
 kinematics: corexy
-max_velocity: 1000
+max_velocity: 300
 max_accel: 2000
 max_z_velocity: 50
 max_z_accel: 100
 
 [force_move]
 enable_force_move: true
+
+[idle_timeout]
+gcode:
+  TURN_OFF_HEATERS
+timeout: 6000
 
 ########################################
 # Fan configuration
@@ -55,11 +60,18 @@ cycle_time: 0.0001# for CPAP
 hardware_pwm: false
 shutdown_speed: 0
 
-[heater_fan coldend_fan]
-pin: FANR
+[heater_fan wc_pump]
+pin: FAN1
 heater: extruder
 heater_temp: 50.0
-fan_speed: 1
+shutdown_speed: 1.0
+
+[heater_fan wc_fan]
+pin: FAN0
+shutdown_speed: 0.0
+max_power: 0.5
+heater: extruder
+heater_temp: 50.0
 
 ########################################
 # Display configuration
@@ -87,11 +99,17 @@ menu_timeout: 10
 # chamber temp
 ########################################
 
-[temperature_sensor chamber]
-sensor_pin: T1
+[temperature_sensor ebay]
+sensor_pin: T4
 sensor_type: ATC Semitec 104GT-2
-pullup_resistor: 2200
+
+[temperature_sensor chamber]
+sensor_pin: T5
+sensor_type: ATC Semitec 104GT-2
 
 [temperature_sensor spider]
 sensor_type: temperature_mcu
 sensor_mcu: mcu
+
+[static_digital_output my_output_pins]
+pins: !FAN2
