--- a/servos.cfg
+++ b/servos.cfg
@@ -6,12 +6,12 @@ dir_pin: X_DIR
 enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
-endstop_pin: X_MIN
+endstop_pin: EBBCan:PB6
 position_min: -1
 position_endstop: 0
 position_max: 525
 homing_speed: 100
-step_pulse_duration: 0.000003
+step_pulse_duration: 0.00001
 
 [stepper_y]
 step_pin: Y_STEP
@@ -22,6 +22,6 @@ rotation_distance: 40
 endstop_pin: Y_MIN
 position_min: -10
 position_endstop: -10
-position_max: 535
+position_max: 545
 homing_speed: 100
-step_pulse_duration: 0.000003
+step_pulse_duration: 0.00001
